--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,8 @@ knitr::opts_chunk$set(
   fig.path = "man/figures/README-",
   out.width = "100%"
 )
+options(digits = 2)
+set.seed(42)
 ```
 
 # CitaviR <img src='man/figures/logo.png' align="right" height="138" />
@@ -20,7 +22,8 @@ knitr::opts_chunk$set(
 <!-- [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/SchmidtPaul/CitaviR?branch=master&svg=true)](https://ci.appveyor.com/project/SchmidtPaul/CitaviR) -->
 <!-- badges: end -->
 
-> This is an unofficial helper package for dealing with Citavi. </br>
+> This is an unofficial helper package for dealing with Citavi. 
+> </br>
 > I am not affiliated with Citavi, just a fan.
 
 The reference management software **Citavi** ([Official Website](https://www.citavi.com/de), [Official GitHub](https://github.com/Citavi)) allows for [exports to Excel](https://www1.citavi.com/sub/manual6/en/index.html?exporting_to_excel.html). With a bit of effort (i.e. via customized [Citavi macros](https://www1.citavi.com/sub/manual6/en/index.html?add_on_display_macros.html)) it also allows for [imports from Excel](https://github.com/Citavi/Macros/blob/master/CIM%20Import/CIM007%20Import%20arbitrary%20data%20from%20Microsoft%20Excel%20into%20custom%20fields%20of%20existing%20references%20by%20short%20title/readme.de.md). `CitaviR` provides functionality for dealing with the data while it is *outside* Citavi to get the most out of it. Using CitaviR goes hand in hand with using the custom Citavi macros in the [CitaviRMacros repository](https://github.com/SchmidtPaul/CitaviRMacros).
@@ -35,7 +38,7 @@ devtools::install_github('SchmidtPaul/CitaviR')
 
 ## Workflow
 
-The entire work flow from start to finish is structured in five steps.
+The work flow from start to finish is structured in five steps.
 
 ```{r, echo=FALSE, out.width = "60%"}
 knitr::include_graphics("man/figures/Workflow.png")
