--- a/vignettes/CitaviR.Rmd
+++ b/vignettes/CitaviR.Rmd
@@ -19,7 +19,7 @@ options(digits = 2)
 set.seed(42)
 ```
 
-Generally, the work flow from start to finish is structured in five steps.
+In general, the work flow from start to finish is structured in five steps.
 
 ```{r, echo=FALSE, out.width = "60%"}
 knitr::include_graphics("https://github.com/SchmidtPaul/CitaviR/blob/master/man/figures/Workflow.png?raw=true")
