--- a/README.Rmd
+++ b/README.Rmd
@@ -42,13 +42,13 @@ knitr::include_graphics("man/figures/Workflow.png")
 
 Step | CitaviR | Effort: 1st time setup | Effort: regular use
 -|-|-|-
-Step 1: Citavi to xlsx    |                    | `r emo::ji("slightly_smiling_face")` | `r emo::ji("sunglasses")`
-Step 2: xlsx to R         | `r emo::ji("check")` | `r emo::ji("sunglasses")`  | `r emo::ji("sunglasses")`
-Step 3: Process data in R | `r emo::ji("check")` | `r emo::ji("slightly_smiling_face")` | `r emo::ji("sunglasses")`
-Step 4: R to xlsx         | `r emo::ji("check")` | `r emo::ji("sunglasses")`  | `r emo::ji("sunglasses")`
-Step 5: xlsx to Citavi    |                    | `r emo::ji("explode")`    | `r emo::ji("slightly_smiling_face")`
+Step 1: Citavi to xlsx    |         | &#128527; | &#128526;
+Step 2: xlsx to R         | &#9989; | &#128526; | &#128526;
+Step 3: Process data in R | &#9989; | &#128527; | &#128526;
+Step 4: R to xlsx         | &#9989; | &#128526; | &#128526;
+Step 5: xlsx to Citavi    |         | &#128165; | &#128527;
 
-**Effort levels:** low effort `r emo::ji("sunglasses")`; acceptable effort `r emo::ji("slightly_smiling_face")`; can be cumbersome `r emo::ji("explode")` 
+**Effort levels:** low effort &#128526;; acceptable effort &#128527;; can be cumbersome &#128165; 
 
 ### Example
 
