--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,15 @@ set.seed(42)
 > </br>
 > I am not affiliated with Citavi, just a fan.
 
-The reference management software **Citavi** ([Official Website](https://www.citavi.com/de), [Official GitHub](https://github.com/Citavi)) allows for [exports to Excel](https://www1.citavi.com/sub/manual6/en/index.html?exporting_to_excel.html). With a bit of effort (i.e. via customized [Citavi macros](https://www1.citavi.com/sub/manual6/en/index.html?add_on_display_macros.html)) it also allows for [imports from Excel](https://github.com/Citavi/Macros/blob/master/CIM%20Import/CIM007%20Import%20arbitrary%20data%20from%20Microsoft%20Excel%20into%20custom%20fields%20of%20existing%20references%20by%20short%20title/readme.de.md). `CitaviR` provides functionality for dealing with the data while it is *outside* Citavi to get the most out of it. Using CitaviR goes hand in hand with using the custom Citavi macros in the [CitaviRMacros repository](https://github.com/SchmidtPaul/CitaviRMacros).
+**Citavi** ([Official Website](https://www.citavi.com/de), [Official GitHub](https://github.com/Citavi)) is a software program for reference management and knowledge organization. When working with [local Citavi projects](https://www1.citavi.com/sub/manual6/en/index.html?101_creating_a_local_project.html) (as opposed to [cloud](https://www1.citavi.com/sub/manual6/en/index.html?101_creating_a_cloud_project.html) or [server](https://www1.citavi.com/sub/manual6/en/index.html?101_creating_a_server_project.html) projects) you can directly work on the (database stored in) the `.ctv6` file via SQL. `CitaviR` provides functionality for 
+
+  1. reading the data from the `.ctv6` file
+  2. dealing with the data while it is *outside* Citavi to get the most out of it
+  3. writing/updating the data into the `.ctv6` file
+  
+```{r, echo=FALSE, out.width = "50%"}
+knitr::include_graphics("man/figures/WorkflowSQL.png")
+```
 
 ## Installation
 
@@ -31,24 +39,6 @@ You can install the development version of `CitaviR` from GitHub:
 ```{r install_devtools, eval=FALSE}
 devtools::install_github('SchmidtPaul/CitaviR')
 ```
-
-## Workflow
-
-The work flow from start to finish is structured in five steps.
-
-```{r, echo=FALSE, out.width = "60%"}
-knitr::include_graphics("man/figures/Workflow.png")
-```
-
-Step | CitaviR | Effort: 1st time setup | Effort: regular use
--|-|-|-
-Step 1: Citavi to xlsx    |         | &#128527; | &#128526;
-Step 2: xlsx to R         | &#9989; | &#128526; | &#128526;
-Step 3: Process data in R | &#9989; | &#128527; | &#128526;
-Step 4: R to xlsx         | &#9989; | &#128526; | &#128526;
-Step 5: xlsx to Citavi    |         | &#128165; | &#128527;
-
-**Effort levels:** low effort &#128526;; acceptable effort &#128527;; can be cumbersome &#128165; 
 
 ### Example
 
